<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.quickmaster</groupId>
    <artifactId>quickmaster</artifactId>
    <version>1.3.0</version>
    <name>QuickMaster</name>
    <description>
        QuickMaster, an offline audio mastering desktop application (JavaFX).
        Multi-band parametric and dynamic EQ with spectral Auto EQ, automatic
        look-ahead dynamics, saturation and clipping, a true-peak multiband
        limiter, peak normalization and LUFS metering, built on the DSPark
        DSP engine.
    </description>
    <url>https://github.com/CristianMoresi/QuickMaster</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Cristian Moresi</name>
            <url>https://github.com/CristianMoresi</url>
        </developer>
    </developers>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>21.0.11</javafx.version>
        <junit.version>5.10.2</junit.version>
        <jna.version>5.17.0</jna.version>
    </properties>

    <dependencies>
        <!-- DSPark for Java, the audio DSP engine -->
        <dependency>
            <groupId>com.dspark</groupId>
            <artifactId>dspark</artifactId>
            <version>0.1.0</version>
        </dependency>

        <!-- JavaFX UI -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- Win32 WM_SIZING constraint. JavaFX itself has no Stage
             aspect-ratio property. -->
        <dependency>
            <groupId>net.java.dev.jna</groupId>
            <artifactId>jna-platform</artifactId>
            <version>${jna.version}</version>
        </dependency>

        <!-- MP3 decoding (read support) -->
        <dependency>
            <groupId>javazoom</groupId>
            <artifactId>jlayer</artifactId>
            <version>1.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.soundlibs</groupId>
            <artifactId>mp3spi</artifactId>
            <version>1.9.5.4</version>
        </dependency>

        <!-- MP3 encoding (write support), pure-Java LAME port -->
        <dependency>
            <groupId>de.sciss</groupId>
            <artifactId>jump3r</artifactId>
            <version>1.0.5</version>
        </dependency>

        <!-- JSON configuration -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.10.1</version>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <version>1.10.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>quickmaster</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <!-- Preserve each dynamic variant's name in machine-verifiable XML. -->
                    <statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
                        <usePhrasedTestCaseMethodName>true</usePhrasedTestCaseMethodName>
                    </statelessTestsetReporter>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>com.quickmaster.QuickMasterApp</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.5.1</version>
                <configuration>
                    <archive>
                        <manifestFile>${project.build.directory}/conformance/MANIFEST.MF</manifestFile>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>prepare-official-loudness-attestation</id>
                        <phase>prepare-package</phase>
                        <goals><goal>run</goal></goals>
                        <configuration>
                            <target>
                                <java classname="com.quickmaster.processing.dynamics.leveler.ConformancePackageAssembler" fork="true" failonerror="true">
                                    <classpath refid="maven.test.classpath"/>
                                    <sysproperty key="qm.officialLoudness" value="${qm.officialLoudness}"/>
                                    <sysproperty key="qm.ituRoot" value="${qm.ituRoot}"/>
                                    <sysproperty key="qm.ebuRoot" value="${qm.ebuRoot}"/>
                                    <sysproperty key="qm.ituManifest" value="${qm.ituManifest}"/>
                                    <sysproperty key="qm.ebuManifest" value="${qm.ebuManifest}"/>
                                    <sysproperty key="qm.ebuAuthorization" value="${qm.ebuAuthorization}"/>
                                    <sysproperty key="qm.conformanceEpoch" value="${qm.conformanceEpoch}"/>
                                    <arg value="prepare"/>
                                    <arg value="${project.basedir}"/>
                                    <arg value="${project.build.outputDirectory}"/>
                                    <arg value="${project.build.testOutputDirectory}"/>
                                    <arg value="${project.build.directory}/conformance"/>
                                    <arg value="${project.build.directory}/${project.build.finalName}.jar"/>
                                </java>
                            </target>
                        </configuration>
                    </execution>
                    <execution>
                        <id>verify-packaged-loudness-attestation</id>
                        <phase>package</phase>
                        <goals><goal>run</goal></goals>
                        <configuration>
                            <target>
                                <java classname="com.quickmaster.processing.dynamics.leveler.ConformancePackageAssembler" fork="true" failonerror="true">
                                    <classpath refid="maven.test.classpath"/>
                                    <sysproperty key="qm.officialLoudness" value="${qm.officialLoudness}"/>
                                    <arg value="verify"/>
                                    <arg value="${project.basedir}"/>
                                    <arg value="${project.build.outputDirectory}"/>
                                    <arg value="${project.build.testOutputDirectory}"/>
                                    <arg value="${project.build.directory}/conformance"/>
                                    <arg value="${project.build.directory}/${project.build.finalName}.jar"/>
                                </java>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
